pkg/tests/testthat/errors/test_params2.R
library(isismdl)
library(testthat)

#cmpmdl("../mdl/params2"; options = strict);
